--- a/Front-end/assets/css/admin/dashboard.css
+++ b/Front-end/assets/css/admin/dashboard.css
@@ -17,6 +17,17 @@
   transition: all 0.3s;
 }
 
+.admin-back-btn {
+  color: var(--secondary-color);
+  border:1px solid var(--primary-color) !important;
+}
+
+.admin-back-btn:hover {
+  color: white;
+  border:0;
+  background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
+}
+
 .sidebar-header {
   display: flex;
   align-items: center;
