Auth Logic Updated

--- a/Front-end/assets/css/common.css
+++ b/Front-end/assets/css/common.css
@@ -48,11 +48,11 @@ body {
 }
 
 .colored-toast .swal2-close {
-  color: white;
+  color: #4e54c8;
 }
 
 .colored-toast .swal2-html-container {
-  color: white;
+  color: #600097;
 }
 
 
