--- a/Front-end/assets/css/profile.css
+++ b/Front-end/assets/css/profile.css
@@ -422,6 +422,17 @@
   gap: 10px;
 }
 
+#uploadSpinner {
+  position: absolute;
+  color: #474747; /* Change color to match your design */
+}
+
+/* Disabled state styling */
+#profileImageInputLabel[disabled] {
+  opacity: 0.7;
+  cursor: not-allowed;
+}
+
 @keyframes reaction-float {
   0% {
     transform: translate(-50%, 0) scale(0);
