--- a/Front-end/assets/css/auth.css
+++ b/Front-end/assets/css/auth.css
@@ -202,6 +202,25 @@
     color: #4e54c8;
   }
 
+.form-floating > .form-control.is-valid {
+  border-color: #198754;
+  padding-right: calc(1.5em + 0.75rem);
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23198754' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
+  background-repeat: no-repeat;
+  background-position: right calc(0.375em + 0.1875rem) center;
+  background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+}
+
+.verify-button {
+  position: absolute;
+  right: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 4;
+  padding: 0.25rem 0.5rem;
+  font-size: 0.875rem;
+}
+
 /* Buttons */
 .btn-primary {
   background: linear-gradient(135deg, #600097 0%, #4e54c8 100%);
